# BOB-Google-Maps

./: .QUEBEC_CLEANUP_ARCHIVE_MANIFEST.txt  .WORKSPACE_STATUS_NOVEMBER_10.txt  .dockerignore  .env.example  .gitignore  .ruff.toml  108_STEPS_TO_PERFECTION.md  ANALYSIS_EXECUTIVE_SUMMARY.txt  BOB_ARCHITECTURE_QUICK_REFERENCE.txt  BOB_CONCEPT.md  BOB_V3.5.0_MASTER_STATUS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LEADS_EXTRACTION_REPORT.md  COMPLETE_CLEANUP_FINAL_REPORT.md  COMPREHENSIVE_EVALUATION_REPORT.md  COMPREHENSIVE_TEST_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_REPORT.md  DIVINE_COMPLETION_REPORT.md  Dockerfile  Dockerfile.api  FINAL_COMPREHENSIVE_REPORT.md  FINAL_PHASE_3_READINESS_CERTIFICATION.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  GYPSY_TEST_ANALYSIS.md  HONEST_ASSESSMENT_V4.2.1.md  HOSPITALITY_RETAIL_LEADS_EXTRACTION_REPORT.md  INDEX_PHASE_3_DELIVERABLES.md  JODHPUR_VALIDATION_ANALYSIS.md  KNOWN_ISSUES.md  LICENSE  LICENSE.md  MIGRATION_CHECKLIST.md  ORGANIZATION_SUMMARY.md  PHASE_3_AUTONOMOUS_EXECUTION_PLAN.md  PHASE_3_LAUNCH_REPORT.md  PHASE_3_VALIDATION_SUMMARY.md  (+139 more)
.archive/v1-old/: ACKNOWLEDGMENTS.md  DEPLOYMENT_SUMMARY.md  FINAL_CHECKLIST_V3.3.md  RELEASE_NOTES_V3.3.md  V3.3_FINAL_RELEASE_SUMMARY.md
.github/: CODEOWNERS  README.md  labeler.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  dependency-scan.yml  docker.yml  docs.yml  lint.yml  pr-checks.yml  publish.yml  python.yml  release.yml  security-scan.yml  test.yml  tests.yml  version.yml
archive/data_archive/: scale_validation_100_results.json  validated_test_urls.json
archive/test_results_archive/: test_results_20251004_095924.json
archive/v2/: bob_maps.py
bob/: __init__.py  __main__.py  cli.py  exceptions.py
bob/cache/: __init__.py  cache_manager.py
bob/config/: __init__.py  settings.py
bob/extractors/: __init__.py  hybrid.py  hybrid_optimized.py  playwright.py  playwright_optimized.py  selenium.py  selenium_optimized.py
bob/models/: __init__.py  business.py  image.py  review.py
bob/utils/: __init__.py  batch_processor.py  email_extractor.py  exporters.py  image_extractor.py  images.py  parallel_extractor.py  (+2 more)
bob_api/: __init__.py  auth.py  config.py  main.py  middleware.py  models.py
bob_core/: __init__.py  analytics.py  auto_recovery.py  batch.py  business_parser.py  circuit_breaker.py  cli.py  config.py  connection_pooling.py  data_quality.py  dead_letter_queue.py  error_codes.py  export.py  graceful_degradation.py  health_check.py  health_cli.py  logging_config.py  memory_management.py  models.py  performance_monitoring.py  playwright_backend.py  rate_limiter.py  retry_strategy.py  review_parser.py  scraper.py  selector_healing.py  url_validator.py  utils.py
bob_v3/: __init__.py  __main__.py  cli.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEBASE_ORGANIZATION_ANALYSIS.md  COMPREHENSIVE_DEEP_ANALYSIS.md  DEVELOPER.md  FINAL_COMPREHENSIVE_FINDINGS.md  FINAL_VERIFICATION_REPORT.md  FIXES_IMPLEMENTED_SUMMARY.md  FULL_TEST_BRANDING_FINDINGS.md  GITHUB_SETUP.md  INSTALLATION.md  JODHPUR_REAL_VALIDATION_NOVEMBER_2025.md  KNOWN_ISSUES.md  PRODUCTION_RELEASE_READY.md  QUICKSTART.md  README.md  THERMODYNAMICS.md  TROUBLESHOOTING.md  WORKSPACE_STATUS_NOVEMBER_15_2025.md  advanced.md  api.md  index.md  installation.md  vision.md
examples/: 01_basic_extraction.py  02_with_reviews.py  03_batch_extraction.py  03_with_cache.py  04_export_json.py  04_using_cache.py  05_batch_extraction.py  05_export_formats.py  06_engine_selection.py  06_export_formats.py  07_city_extraction.py  08_parallel_extraction.py  README.md  business_directory.py  extract_single_business.py  jodhpur_furniture_exporters.py  kuala_lumpur_furniture.py  quick_start.py  thermodynamics_demo.py
leads/: README.md  abu_dhabi_alreem_lead.json  abu_dhabi_municipality.json  abu_dhabi_yas_lead.json  architecture_search_1_dubai.json  bahrain_luxury_lead_1.json  college_interior_design_search.json  commercial_fitout_leads.json  commercial_furniture_leads.json  commercial_office_leads.json  dammam_lead1.json  dammam_lead2_alt.json  dammam_lead3.json  debug_result.json  downtown_dubai_luxury_1.json  downtown_dubai_premium_1.json  downtown_penthouse.json  dubai_downtown_leads.json  dubai_interior_design_comprehensive_leads.json  dubai_marina_leads.json  dubai_marina_luxury.json  dubai_marina_luxury_search.json  dubai_palm_jumeirah_leads.json  education_institutions_leads.json  emaar_malls_search.json  emirates_hills_luxury_1.json  furniture_search_2.json  furniture_search_3.json  furniture_search_4.json  furniture_search_5.json  furniture_search_6.json  furniture_search_7.json  gcc_hospitality_Bahrain_lead.json  gcc_luxury_Qatar_lead.json  gcc_office_Sharjah_lead.json  government_municipal_projects_leads.json  gypsy_cache_test.json  gypsy_dhaba_results.json  hct_dubai_search.json  healthcare_search_3.json  (+57 more)
legacy/: README_legacy.md  check_progress.py  error_codes.md  find_duplicates_simple.py  input_statistics.py  process_urls.py  requirements.txt
scripts/: README.md  backup_cache.sh  benchmark.sh  clean_cache.sh  debug_extraction.py  deploy.py  deploy.sh  divine_optimization.py  extract_commercial_furniture_suppliers.py  focused_furniture_extraction.py  government_municipal_specialist.py  healthcare_facilities_leads.py  real_estate_developer_extractor.py  realistic_batch_test.py  run_tests.sh  setup.bat  setup.sh  test_browser_lifecycle_fix.py  test_extraction.py  test_simple.py
tests/: __init__.py  conftest.py  test_analytics.py  test_circuit_breaker.py  test_debug_extraction.py  test_direct_business_navigation.py  test_export.py  test_gypsy_realistic.py  test_gypsy_website_extraction.py  test_jaipur_complete.py  test_jaipur_validation.py  test_jodhpur_bikaner_real.py  test_models.py  test_multiple_businesses.py  test_simple.py  test_smoke.py  test_starbucks.py  test_system.py  test_thermodynamics.py  test_v3.3_delhi_royale.py  test_website_extraction_debug.py
validation_output_delhi_royale/: COMPLETE_VALIDATION_SUMMARY.txt  VALIDATION_REPORT.txt  extraction_report.json
(+184 files in other folders)
